CDP-2158 Tech Debt: FDA: decrease number of critical code smells